# PAS

./: .gitignore  README.md
PAS/: pom.xml
PAS/ApplicationCore/: pom.xml
PAS/ApplicationCore/ApplicationService/: pom.xml
PAS/ApplicationCore/DomainModel/: pom.xml
PAS/ApplicationPorts/: pom.xml
PAS/RepositoriesAdapters/: pom.xml
PAS/RepositoriesAdapters/DataModel/: pom.xml
PAS/RepositoriesAdapters/Repository/: pom.xml
PAS/RepositoriesAdapters/RepositoryAdapter/: pom.xml
PAS/src/main/resources/: messages.properties
PAS/src/main/web/: addborrow.xhtml  book.xhtml  borrows.xhtml  client.xhtml  resources.xhtml  styles.css  user.xhtml
PAS/web/: addborrow.xhtml  addresource.xhtml  adduser.xhtml  audiobook.xhtml  auth.css  book.xhtml  borrow.xhtml  borrows.xhtml  client.xhtml  forms.xhtml  index.jsp  index.xhtml  resources.xhtml  styles.css  user.xhtml  users.xhtml
PAS/web/WEB-INF/: faces-config.xml  template.xhtml  web.xml
PAS/web/auth/: auth.html  error.html
SPA/: angular.json  package-lock.json  package.json
SPA/e2e/: cypress.json
SPA/src/app/: app-routing.module.ts  app.component.html  app.component.less  app.component.ts  app.module.ts  user.service.ts
SPA/src/app/add-user/: add-user.component.html  add-user.component.less  add-user.component.ts
SPA/src/app/edit-user/: edit-user.component.html  edit-user.component.less  (+1 more)
toRewrite/: CMakeLists.txt
toRewrite/include/: Client.h  ClientManager.h  ClientRepository.h  Movie.h  MovieManager.h  MovieRepository.h  NormalClient.h  PremiumClient.h  Repository.h  RepositoryException.h  Ticket.h  TicketManager.h  TicketRepository.h
toRewrite/src/: Client.cpp  ClientManager.cpp  ClientRepository.cpp  Movie.cpp  MovieManager.cpp  MovieRepository.cpp  NormalClient.cpp  PremiumClient.cpp  RepositoryException.cpp  Ticket.cpp  TicketManager.cpp  TicketRepository.cpp  main.cpp
toRewrite/test/: ClientTest.cpp  MovieTest.cpp  TicketTest.cpp
(+329 files in other folders)
